Traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system 
spec:
  allocateLoadBalancerNodePorts: true
  ports:
  # - name: web
  #   nodePort: 80
  #   port: 80
  #   protocol: TCP
  #   targetPort: web
  - name: websecure
    nodePort: 443
    port: 443
    protocol: TCP
    targetPort: websecure
  - name: redis
    nodePort: 6379
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  type: LoadBalancer
