Traefik/traefik-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system 
spec:
  ports:
    - name: web
      port: 80
      nodePort: 80
      targetPort: web
      protocol: TCP
    - name: websecure
      nodePort: 443
      port: 443
      protocol: TCP
      targetPort: websecure
  
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
        - name: api@internal
          kind: TraefikService
