Traefik/traefik-ingress.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard-web
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: PathPrefix(`traefik.example.io`) || PathPrefix(`/api`)
#       services:
#         - name: api@internal
#           kind: TraefikService

# ---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`traefik.example.io`) || PathPrefix(`/api`)
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashbord-secret
